# acidcam-cli

./: CMakeLists.txt  Dockerfile  Makefile.am  README.md  autogen.sh  config.h  configure.ac  docker-build.sh
acidcam/: Makefile.am  ac.cpp  acidcam  acidcam-cli-imp.cpp  acidcam-cli-main.cpp  acidcam-cli.cpp  acidcam-cli.hpp  ffmpeg_write.cpp
acidcam/plugins/: README.md
acidcam/plugins/blank/: Makefile
acidcam/plugins/vertsort/: Makefile  source.cpp
build_scripts/: build_acidcam-cli.sh  build_libacidcam.sh  install_packages.sh
c++.plugins/: README.md
c++.plugins/blank/: Makefile
macos-static/: Makefile  acidcam-cli-main.cpp  acidcam-cli.cpp  acidcam-cli.hpp  ffmpeg_write.cpp  ffmpeg_write.h
plugins/: README.md  random_pixels.py
plugins/blank/: source.cpp
plugins/example/: source.cpp
plugins/vertsort/: Makefile
python.plugins/: example.py  random_pixels.py  selfalphablend.py
python.scripts/: blank.py  call_filter.py  random_pixels.py
scripts/: acidcam-sound  acidcam_const_quality.x264  acidcam_const_quality.x265.sh  random_pixels.py
windows/: Makefile  Makefile.Debug  Makefile.Release  ac-util.cpp  acidcam-cli-main.cpp  acidcam-cli.cpp  acidcam-cli.hpp  acidcam-console.files  console.pro  main.cpp
